# veri

./: .gitignore  AGENTS.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  TELEMETRY.md  justfile  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: benchmarks.yml  ci.yml
.veri/cache/: imports.graph.json  markers.index.json  module.map.json  revdeps.graph.json
ci/: README.md  azure-pipelines.yml  github-actions.yml  gitlab-ci.yml
crates/veri-cli/: Cargo.toml
crates/veri-cli/src/: cli.rs  cli_tests.rs  commands.rs  main.rs
crates/veri-cli/src/orchestrator/: collection_service.rs  coverage.rs  execution.rs  execution_orchestrator.rs  internals.rs  mod.rs  selection_orchestrator.rs  telemetry.rs  telemetry_orchestrator.rs  validation_service.rs  watch.rs
crates/veri-cli/tests/: runs_collect_command.rs
crates/veri-core/: Cargo.toml
crates/veri-core/examples/: phase2_demo.rs
crates/veri-core/src/: cache.rs  compatibility.rs  config.rs  coverage.rs  diagnostics.rs  event_stream.rs  flaky.rs  import_graph.rs  lib.rs  paths.rs  planner.rs  python_launcher.rs  python_worker.rs  python_worker_tests.rs  scheduler.rs  schema_tests.rs  schemas.rs  security.rs  sharder.rs  telemetry.rs  watch.rs  worker_pool.rs
docs/: BENCHPLAN.md  BRANDING.md  COMPARATIVE_SPEC.md  ERROR-COPY.md  FIX_PLAN.md  IMPLEMENTATION_PLAN.md  MIGRATION.md  MULTI_WORKER_PLAN.md  PAIN_POINTS.md  PHASE3_IMPLEMENTATION_PROGRESS.md  PHASE_10_SUMMARY.md  PHASE_11_SUMMARY.md  PHASE_11_VERIFICATION.md  PHASE_12_SUMMARY.md  PHASE_13_SUMMARY.md  PHASE_1_SUMMARY.md  PHASE_2_SUMMARY.md  PHASE_3_SUMMARY.md  PHASE_4_SUMMARY.md  PHASE_5_SUMMARY.md  PHASE_6_SUMMARY.md  PHASE_7_SUMMARY.md  PHASE_8_SUMMARY.md  PHASE_9_SUMMARY.md  PLAN.md  QUICKSTART.md  RFC.md  ROADMAP.md  SPEC.md  TEST_PLAN.md  TROUBLESHOOTING.md  veri_test_runner_comprehensive_artifact_pack_v_0.1.md
docs/validation/: ADDED_VALUE_VALIDATION.md
examples/: conftest.py  phase13_test.py  phase14_multiworker_test.py  phase15_integration_tests.py  veri.toml
examples/phase3_demo/: README.md  calculator.py  conftest.py  shards.json  test_basic.py  test_calculator.py  test_phase9_demo.py  test_syntax_error.py
examples/phase3_demo/.veri/cache/: imports.graph.json  markers.index.json  module.map.json  revdeps.graph.json  tests.index.json  veri_worker.py
examples/phase8_demo/: README.md  test_sharding.py
examples/phase8_demo/.veri/cache/: markers.index.json  tests.index.json
py_worker/: pyproject.toml  veri_worker.py
py_worker/.veri/cache/: markers.index.json  tests.index.json
py_worker/contracts/: __init__.py  base.py  markers_index.py  tests_index.py
py_worker/tests/: conftest.py  test_ast.py  test_collect.py  test_execute.py  test_paths.py  test_schema.py
schemas/: README.md  coverage.map.json  event.jsonl.json  fixtures.map.json  imports.graph.json  markers.index.json  module.map.json  revdeps.graph.json  shards.manifest.json  tests.index.json  timings.json  worker_protocol.v1.json
scripts/: bench.py  generate_benchmark_summary.py  matrix_test.py  quick_benchmark_test.py  setup_benchmark_repos.py
src/veri/: __init__.py
