[workspace]
resolver = "2"
members = [
    "crates/veri-core",
    "crates/veri-cli",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
authors = ["Dennis <dennis8@users.noreply.github.com>"]
repository = "https://github.com/dennis8/veri"
description = "Ultra-fast, pytest-compatible, impact-aware test runner"

[workspace.dependencies]
# Common dependencies can be defined here for consistency across crates