[project]
name = "veri-py-worker"
version = "0.0.1"
description = "Python pytest shim for veri"
requires-python = ">=3.11"
dependencies = [
    "pytest>=7.0.0",
    "pytest-xdist>=2.0.0",  # For parallel execution support
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
