[project]
name = "veri-py-worker"
version = "0.0.1"
description = "Python pytest shim for veri"
requires-python = ">=3.11"
dependencies = [
    "pytest>=7.0.0",
    "pytest-xdist>=2.0.0",  # For parallel execution support
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "jsonschema>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]  # Line too long - handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["veri_worker"]

[tool.mypy]
strict = true
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[dependency-groups]
dev = [
    "mypy>=1.17.1",
]
