[package]
name = "veri-cli"
version = "0.0.1"
edition = "2021"

[dependencies]
veri-core = { path = "../veri-core" }
clap = { version = "4.4", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
env_logger = "0.10"
log = "0.4"
num_cpus = "1.0"
ctrlc = "3.4"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[dev-dependencies]
assert_cmd = "2.0"
tempdir = "0.3"
