[package]
name = "veri-core"
version = "0.0.1"
edition = "2021"

[lib]
name = "veri_core"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
log = "0.4"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
num_cpus = "1.0"
notify = "6.0"
ignore = "0.4"
crossterm = "0.28"

[dev-dependencies]
tempfile = "3.8"
